# Star-Courier

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  INTEGRATION_SUMMARY_v5.md  LICENSE  LICENSE_RU  README.md  TODO.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
docs/: Star_Courier_Characters.docx
src/: __init__.py  abilities.py  abilities_advanced.py  advanced_abilities.py  ascii_art.py  chapters_1_5.py  characters.py  colors.py  config.py  dialogues.py  dialogues_ch11_18.py  dialogues_ch14_18.py  dialogues_ch6_10.py  ending_scenes.py  ending_system.py  faction_manager.py  gameplay.py  items.py  mental_state.py  new_characters_dialogues.py  path_quests.py  path_system.py  quests.py  quests_ch11_12.py  quests_ch14_18.py  quests_ch6_10.py  random_events.py  relationship_enhancements.py  resonance.py  romance_scenes.py  save_system.py  scenes_ch14_18.py  scenes_ch1_2.py  system_check.py  utils.py
tests/: __init__.py  test_ending_scenes.py  test_game.py  test_game_run.py  test_mental_state.py  test_resonance.py  test_romance_scenes.py  test_scenes_ch14_18.py
tools/: extract_docx.py  port_check.py  read_docx.py
